--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1767,6 +1767,9 @@ plugins:
         condition: 'active("Dawnguard.esm") and checksum("SkyRealism - Capacity and Carry Weight.esp", 4F1987E0)'
 
   - name: 'SkyrimHeartRate.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/35050/'
+        name: 'Skyrim Heart Rate Beta'
     msg:
       # doNotClean
       - type: say
