--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1771,7 +1771,6 @@ plugins:
       - link: 'https://www.nexusmods.com/skyrim/mods/35050/'
         name: 'Skyrim Heart Rate Beta'
     msg:
-      # doNotClean
       - type: say
         content:
           - lang: en
@@ -1783,6 +1782,7 @@ plugins:
           - lang: ru
             text: 'Патч для Skyrim Heart Rate доступен для людей, использующих сообщения из мода Think to Yourself. Доступен на [Skyrim Nexus](https://www.nexusmods.com/skyrim/mods/36182).'
         condition: 'file("TTYM - Think to Yourself Messages.esp")'
+    # Do not clean
 
   - name: 'UsefulDogs.esp'
     url:
