--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2256,6 +2256,11 @@ plugins:
       - 'EBS - Books (After).esp'
 
   - name: 'TrissArmorRetextured.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/4708/'
+        name: 'Triss Armor Retextured CBBE HDT'
+      - link: 'https://www.nexusmods.com/skyrim/mods/26230/'
+        name: 'Sharlikran''s Compatibility Patches'
     msg:
       - type: say
         content:
