--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2236,7 +2236,7 @@ plugins:
         crc: 0xAAFE91D6
         util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 10
-  - name: 'Warburg''s 3D Paper World Map - (Dawnguard|Dragonborn)\.esp'
+  - name: 'Warburg''s 3D Paper World Map - (dawnguard|Dragonborn)\.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/25501/'
         name: 'Paper World Map'
