--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2208,6 +2208,7 @@ plugins:
       - crc: 0x83E18690
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'Warburg''s 3D Paper World Map - (dawnguard|Dragonborn|Texture [12])\.esp'
   - name: 'Warburg''s 3D Paper World Map - Texture [12]\.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/25501/'
