--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2215,6 +2215,9 @@ plugins:
   - name: 'Warburg''s 3D Paper World Map - Texture [12]\.esp'
     group: *alternateStartGroup
     msg:
+      - <<: *useOnlyOneX
+        subs: [ 'Paper World Map Texture ESP' ]
+        condition: 'many("Warburg''s 3D Paper World Map - Texture [12]\.esp")'
       - type: say
         content:
           - lang: en
@@ -2224,14 +2227,12 @@ plugins:
           - lang: ja
             text: 'ズームイン時に問題が発生し続ける場合、ユーザーリストを編集してなるべく下の方、動的に生成されたプラグインの後にロードさせてください。'
   - name: 'Warburg''s 3D Paper World Map - Texture 1.esp'
-    inc: [ 'Warburg''s 3D Paper World Map - Texture 2.esp' ]
     dirty:
       - <<: *quickClean
         crc: 0xC243A5F2
         util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 10
   - name: 'Warburg''s 3D Paper World Map - Texture 2.esp'
-    inc: [ 'Warburg''s 3D Paper World Map - Texture 1.esp' ]
     dirty:
       - <<: *quickClean
         crc: 0xAAFE91D6
