--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2234,6 +2234,9 @@ plugins:
     group: *mapMarkersGroup
 
   - name: 'WorldMapInFull3D.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/145/'
+        name: 'World Map in full 3D'
     msg:
       - type: say
         content:
