Add cleaning data
  * v1.2.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2237,6 +2237,9 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/145/'
         name: 'World Map in full 3D'
+    clean:
+      - crc: 0x78DD5B64
+        util: 'TES5Edit v4.0.4c'
 
 ###### Items ######
   - name: 'Book Covers Skyrim.esp'
