--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2233,6 +2233,14 @@ plugins:
   - name: 'Warburg''s 3D Paper World Map - (dawnguard|Dragonborn)\.esp'
     group: *mapMarkersGroup
 
+  - name: 'WorldMapInFull3D.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/145/'
+        name: 'World Map in full 3D'
+    clean:
+      - crc: 0x78DD5B64
+        util: 'TES5Edit v4.0.4c'
+
 ###### Items ######
   - name: 'Book Covers Skyrim.esp'
     url:
@@ -24129,18 +24137,7 @@ plugins:
         itm: 12
   - name: 'PaperMapHeightEnhanced.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/22425/' ]
-  - name: 'WorldMapInFull3D.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'If you are using other map mods, e.g. Quality World Map with roads, change uLockedTerrainLOD to 32 to display them (only indoors)'
-          - lang: de
-            text: 'Wenn Sie andere Kartenmods verwenden, z.B. Quality World Map with roads, änderen Sie uLockedTerrainLOD auf 32, um sie anzuzeigen (nur drinnen).'
-          - lang: ja
-            text: 'Quality World Map with roadsのような他のマップModを使用している場合は、マップを表示（屋内のみ）するためにuLockedTerrainLODを32に変更してください。'
-          - lang: ru
-            text: 'Если вы используете другие моды. изменяющие карты, такие как Quality World Map with roads, измените параметр uLockedTerrainLOD на 32 для их отображения (только внутри помещений)'
+
   - name: 'SSS Deadly Dragons Patch (A|B|C)\.esp'
     msg:
       - <<: *useOnlyOneX
