--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1148,6 +1148,7 @@ plugins:
         condition: 'many("SoS - The Wilds-PatchCoT(Sounds)?(WinterEdition)?\.esp")'
 
 ###### AudioVisual - Weather & Lighting ######
+  - name: 'better_torches(_brighter_torchlight)?\.esp'
   - name: 'better_torches.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/27443/' ]
     msg:
