--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1149,8 +1149,10 @@ plugins:
 
 ###### AudioVisual - Weather & Lighting ######
   - name: 'better_torches(_brighter_torchlight)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/27443/'
+        name: 'Better Torches'
   - name: 'better_torches.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/27443/' ]
     msg:
       - type: warn
         content:
@@ -1166,7 +1168,6 @@ plugins:
       - crc: 0xB7F684D4
         util: 'TES5Edit v4.0.2i'
   - name: 'better_torches_brighter_torchlight.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/27443/' ]
     inc: [ 'better_torches.esp' ]
     msg:
       - type: warn
