--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1531,6 +1531,9 @@ plugins:
 
 ###### Gameplay ######
   - name: 'Better Vampires.*\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/9717/'
+        name: 'Better Vampires'
   - name: 'Better Vampires.esp'
     after: [ 'Requiem.esp' ]
     msg:
