Add `obsolete` message
  * Replaces metadata of obsolete plugins.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1541,45 +1541,10 @@ plugins:
         subs: [ 'Requiem' ]
         condition: 'active("Requiem.esp") and not active("Requiem - Better Vampires Patch.esp")'
   - name: 'Better Vampires (ML)?( ?- No DawnGuard)?\.esp'
+    msg: [ *obsolete ]
   - name: 'Better Vampires ML.esp'
-    inc:
-      - 'Better Vampires.esp'
-      - 'Better Vampires DG.esp'
   - name: 'Better Vampires ML - No DawnGuard.esp'
-    inc:
-      - 'Better Vampires.esp'
-      - 'Better Vampires DG.esp'
-      - 'Better Vampires ML.esp'
-      - 'Better Vampires - No DawnGuard.esp'
-    msg:
-      - type: warn
-        content:
-          - lang: en
-            text: 'You need the Dawnguard version of better vampires to work as intended with dawnguard.'
-          - lang: de
-            text: 'Sie benötigen die Dawnguard Version von better vampires, damit alles mit Dawnguard wie vorgesehen funktioniert.'
-          - lang: ja
-            text: 'Dawnguard環境下で本来の動作をさせるには、DawnguardバージョンのBetter Vampiresを使用する必要があります。'
-          - lang: ru
-            text: 'Вам нужна Dawnguard-версия better vampires для правильной работы с DLC Dawnguard.'
-        condition: 'active("Dawnguard.esm")'
   - name: 'Better Vampires - No DawnGuard.esp'
-    inc:
-      - 'Better Vampires.esp'
-      - 'Better Vampires DG.esp'
-      - 'Better Vampires ML.esp'
-    msg:
-      - type: warn
-        content:
-          - lang: en
-            text: 'You need the Dawnguard version of better vampires to work as intended with dawnguard.'
-          - lang: de
-            text: 'Sie benötigen die Dawnguard Version von better vampires, damit alles mit Dawnguard wie vorgesehen funktioniert.'
-          - lang: ja
-            text: 'Dawnguard環境下で本来の動作をさせるには、DawnguardバージョンのBetter Vampiresを使用する必要があります。'
-          - lang: ru
-            text: 'Вам нужна Dawnguard-версия better vampires для правильной работы с DLC Dawnguard.'
-        condition: 'active("Dawnguard.esm")'
 
   - name: 'BorderRegionsDisabled(EV)?\.esp'
     url:
