--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1167,6 +1167,7 @@ plugins:
       - crc: 0x29540D4F
         util: 'TES5Edit v4.0.2i'
 
+  - name: 'Blackout_(Skyrim|Dawnguard)\.esp'
   - name: 'Blackout_Skyrim.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/27960/' ]
     msg:
