--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1168,8 +1168,10 @@ plugins:
         util: 'TES5Edit v4.0.2i'
 
   - name: 'Blackout_(Skyrim|Dawnguard)\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/27960/'
+        name: 'Blackout - Simply Darker Dungeons'
   - name: 'Blackout_Skyrim.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/27960/' ]
     msg:
       - type: say
         content:
@@ -1190,7 +1192,6 @@ plugins:
         util: '[TES5Edit v4.0.2i](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 8
   - name: 'Blackout_Dawnguard.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/27960/' ]
     msg:
       - type: say
         content:
