--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1167,6 +1167,26 @@ plugins:
       - crc: 0x29540D4F
         util: 'TES5Edit v4.0.2i'
 
+  - name: 'Blackout_(Skyrim|Dawnguard)\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/27960/'
+        name: 'Blackout - Simply Darker Dungeons'
+    req:
+      - name: '../d3d9.dll'
+        display: '[ENBSeries](http://enbdev.com/download_mod_tesskyrim.htm)'
+  - name: 'Blackout_Skyrim.esp'
+    dirty:
+      # v2.0
+      - <<: *quickClean
+        crc: 0x3A1DA448
+        util: '[TES5Edit v4.0.2i](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 8
+  - name: 'Blackout_Dawnguard.esp'
+    clean:
+      # v2.0
+      - crc: 0x7B30F518
+        util: 'TES5Edit v4.0.2i'
+
   - name: 'ClimatesOfTamriel(-(Dawnguard|Dragonborn|Dungeons|Interiors|Nights|Winter).*)?\.es[mp]'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/17802/'
@@ -4713,46 +4733,7 @@ plugins:
         util: '[TES5Edit v4.0.2i](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 7
         udr: 106
-  - name: 'Blackout_Skyrim.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/27960/' ]
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'This is an ENB mod. Be sure you have the correct ENB setup installed.'
-          - lang: de
-            text: 'Dies ist eine ENB-Mod. Stellen Sie sicher, dass Sie das richtige ENB-Setup installiert haben.'
-          - lang: es
-            text: 'Este mod es para ENBs. Asegúrate de que tu setup de ENB esté correcto.'
-          - lang: ja
-            text: 'ENB用のModです。必ず適切なENBをインストールしてください。'
-          - lang: ru
-            text: 'Это ENB-мод. Убедитесь, что у вас установлена корректная версия ENB.'
-    dirty:
-      # v2.0
-      - <<: *quickClean
-        crc: 0x3A1DA448
-        util: '[TES5Edit v4.0.2i](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 8
-  - name: 'Blackout_Dawnguard.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/27960/' ]
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'This is an ENB mod.  Be sure you have the correct ENB setup installed.'
-          - lang: de
-            text: 'Dies ist eine ENB-Mod. Stellen Sie sicher, dass Sie das richtige ENB-Setup installiert haben.'
-          - lang: es
-            text: 'Este mod es para ENBs.  Asegúrate de que tu setup de ENB esté correcto.'
-          - lang: ja
-            text: 'ENB用のModです。必ず適切なENBをインストールしてください。'
-          - lang: ru
-            text: 'Это ENB-мод.  Убедитесь, что у вас установлена корректная версия ENB.'
-    clean:
-      # v2.0
-      - crc: 0x7B30F518
-        util: 'TES5Edit v4.0.2i'
+
   - name: 'CLARALUX.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/17605/' ]
     dirty:
