--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2195,6 +2195,7 @@ plugins:
   - name: 'LB_MuchAdoSnowElves_WeaponsOnly.esp'
     inc: [ 'LB_MuchAdoSnowElves_Quest.esp' ]
 
+  - name: '(Dawnguard - )?Vigilant of Stendarr Quests( Master| Patch)?\.es[mp]'
   - name: 'Vigilant of Stendarr Quests.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/13725/' ]
     dirty:
