--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2196,8 +2196,10 @@ plugins:
     inc: [ 'LB_MuchAdoSnowElves_Quest.esp' ]
 
   - name: '(Dawnguard - )?Vigilant of Stendarr Quests( Master| Patch)?\.es[mp]'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/13725/'
+        name: 'Vigilant of Stendarr Quests'
   - name: 'Vigilant of Stendarr Quests.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/13725/' ]
     dirty:
       # v1.5B
       - <<: *quickClean
@@ -2210,7 +2212,6 @@ plugins:
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 18
   - name: 'Dawnguard - Vigilant of Stendarr Quests Patch.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/13725/' ]
     msg:
       - type: warn
         content:
@@ -2228,7 +2229,6 @@ plugins:
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 8
   - name: 'Vigilant of Stendarr Quests Master.esm'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/13725/' ]
     dirty:
       # v1.5
       - <<: *quickClean
