Add `corrupt` message
  * Has HITMEs.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2213,6 +2213,7 @@ plugins:
         itm: 18
   - name: 'Dawnguard - Vigilant of Stendarr Quests Patch.esp'
     msg:
+      - *corrupt
       - type: warn
         content:
           - lang: en
