--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2212,23 +2212,7 @@ plugins:
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 18
   - name: 'Dawnguard - Vigilant of Stendarr Quests Patch.esp'
-    msg:
-      - *corrupt
-      - type: warn
-        content:
-          - lang: en
-            text: 'This patch is to be used only if the Hall of the Viligent has been "trashed" by the Dawnguard NPC''s.'
-          - lang: de
-            text: 'Dieser Patch darf nur verwendet werden, wenn die Halle der Wachsamkeit (eng: Hall of the Viligent) von den Dawnguard NPCs "verwüstet" wurde.'
-          - lang: ja
-            text: 'このパッチは番人の間がドーンガードのNPCによって「破壊」されている場合にのみ使用してください。'
-        condition: 'not active("Dawnguard.esm")'
-    dirty:
-      # v1.0
-      - <<: *quickClean
-        crc: 0x9F4D4339
-        util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 8
+    msg: [ *corrupt ]
   - name: 'Vigilant of Stendarr Quests Master.esm'
     dirty:
       # v1.5
