--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2152,6 +2152,7 @@ plugins:
         subs: [ 'Extensible Follower Framework' ]
         condition: 'active("EFFCore.esm")'
 
+  - name: 'mjhKhajiitSpeak.*\.esp'
   - name: 'mjhKhajiitSpeak(DLC - Dawnguard|DLC - Hearthfire|DLC - Dragonborn)?\.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/14513/' ]
     msg:
@@ -2165,6 +2166,7 @@ plugins:
             text: 'このModはすべての会話選択肢を上書きします。カジートプレイをしたい時のみ有効にするといいでしょう。'
           - lang: ru
             text: 'Этот мод перезаписывает все диалоги. Используйте только если играете за Каджита.'
+  - name: 'mjhKhajiitSpeakExtra - (Dagi|Ohmes)-Raht\.esp'
   - name: 'mjhKhajiitSpeakExtra - Dagi-Raht.esp'
     inc: [ 'mjhKhajiitSpeakExtra - Ohmes-Raht.esp' ]
   - name: 'mjhKhajiitSpeakExtra - Ohmes-Raht.esp'
