--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2153,8 +2153,10 @@ plugins:
         condition: 'active("EFFCore.esm")'
 
   - name: 'mjhKhajiitSpeak.*\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/14513/'
+        name: 'Khajiit Speak - Complete Dialogue Overhaul'
   - name: 'mjhKhajiitSpeak(DLC - Dawnguard|DLC - Hearthfire|DLC - Dragonborn)?\.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/14513/' ]
     msg:
       - type: say
         content:
