--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1300,6 +1300,7 @@ plugins:
       - crc: 0x13A02FA4
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'Relighting ?Skyrim.*\.esp'
   - name: 'RelightingSkyrim_Legendary.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/17609/' ]
     clean:
