--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1301,14 +1301,15 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'Relighting ?Skyrim.*\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/17609/'
+        name: 'Relighting Skyrim'
   - name: 'RelightingSkyrim_Legendary.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/17609/' ]
     clean:
       # version: 4.1.3
       - crc: 0xDDE41503
         util: 'TES5Edit v4.0.1'
   - name: 'Relighting Skyrim - Dawnguard.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/17609/' ]
     msg:
       - type: warn
         content:
