Add `obsolete` message
  * Old Dawnguard plugin.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1311,6 +1311,7 @@ plugins:
         util: 'TES5Edit v4.0.1'
   - name: 'Relighting Skyrim - Dawnguard.esp'
     msg:
+      - *obsolete
       - type: warn
         content:
           - lang: en
