--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1310,19 +1310,7 @@ plugins:
       - crc: 0xDDE41503
         util: 'TES5Edit v4.0.1'
   - name: 'Relighting Skyrim - Dawnguard.esp'
-    msg:
-      - *obsolete
-      - type: warn
-        content:
-          - lang: en
-            text: 'Using lightingfix.esp along with Relighting Skyrim - Dawnguard.esp is likely to cause lighting inconsistencies.'
-          - lang: de
-            text: 'Die gleichzeitige Benutzung von lightingfix.esp und Relighting Skyrim - Dawnguard.esp kann zu Inkonsistenzen bei der Beleuchtung führen.'
-          - lang: ja
-            text: 'lightingfix.espをRelighting Skyrim - Dawnguard.espと併用すると光源が不自然になることがあります。.'
-          - lang: ru
-            text: 'Использование lightingfix.esp вместе с Relighting Skyrim - Dawnguard.esp может вызвать несоответствия освещения.'
-        condition: 'file("lightingfix.esp")'
+    msg: [ *obsolete ]
 
   - name: 'TrueStorms.esp'
     url:
