--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2045,7 +2045,7 @@ plugins:
   - name: 'Realistic Wildlife Loot (V1\.3.*|- IMCN)\.esp'
     msg: [ *obsolete ]
 
-  - name: 'RichMerchants\w*\.esp'
+  - name: 'RichMerchants(_Less)?\.esp'
     msg:
       - type: warn
         content:
