--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2046,6 +2046,9 @@ plugins:
     msg: [ *obsolete ]
 
   - name: 'RichMerchants(_Less)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/769/'
+        name: 'Rich Merchants'
     msg:
       - type: warn
         content:
