Update Rich Merchants (#807)
* Move plugin
  * To 'Gameplay - Economy & Item Balance' section.
  * Increases merchant gold amount.

* Update name
  * Narrow down regex.

* Add location
  * https://www.nexusmods.com/skyrim/mods/769/

* Remove message
  * https://steamcommunity.com/sharedfiles/filedetails/?id=7673
  * Only Reactor version is available, no conflicts.
  * Nexus page potentially with Vendor version hidden:
    * https://www.nexusmods.com/skyrim/mods/3413

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2045,6 +2045,12 @@ plugins:
   - name: 'Realistic Wildlife Loot (V1\.3.*|- IMCN)\.esp'
     msg: [ *obsolete ]
 
+  - name: 'RichMerchants(_Less)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/769/'
+        name: 'Rich Merchants'
+    tag: [ Relev ]
+
 ###### Gameplay - Magic & Abilities ######
   - name: 'iMaxPlayerRunes0\d{2}\.esp'
     url:
@@ -18132,20 +18138,7 @@ plugins:
     tag:
       - Delev
       - Relev
-  - name: 'RichMerchants\w*\.esp'
-    msg:
-      - type: warn
-        content:
-          - lang: en
-            text: 'Possible conflict with Vendor-version of Midas Magic in Skyrim, use Reactor-version.'
-          - lang: de
-            text: 'Möglicher Konflikt mit der Vendor-Version von Midas Magic in Skyrim, verwenden Sie die Reactor-Version.'
-          - lang: ja
-            text: 'Vendor-versionのMidas Magic in Skyrimとは競合する可能性があります。Reactor-versionを使用してください。'
-          - lang: ru
-            text: 'Возможны конфликты с Vendor-версией мода Магия мидаса в Скайриме, используйте Reactor-версию.'
-        condition: 'file("MidasSkyrim.esp")'
-    tag: [ Relev ]
+
   - name: 'Safely Thrall.esp'
     msg: [ *obsolete ]
   - name: 'Serana Vampire Lord Bloodcursed After Cure.esp'
