--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -765,6 +765,8 @@ plugins:
         name: 'Unofficial High Resolution Patch'
     group: *unofficialPatchGroup
 
+###### Fixes ######
+
 ###### Modding Tools - Generated Files ######
   - name: 'Occlusion.esp'
     url:
