--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -767,6 +767,9 @@ plugins:
 
 ###### Fixes ######
   - name: 'Vampire Face Fixes.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/13490/'
+        name: 'Vampire Face Fixes'
     msg:
       - type: say
         content:
