Add `alreadyInOrFixedByUSLEEP` message
  * Stated by author as fixed by USLEEP at some point.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -770,6 +770,7 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/13490/'
         name: 'Vampire Face Fixes'
+    msg: [ *alreadyInOrFixedByUSLEEP ]
 
 ###### Modding Tools - Generated Files ######
   - name: 'Occlusion.esp'
